lin reg assignment added

--- a/linear_regression/Mini_Project_Linear_Regression.ipynb
+++ b/linear_regression/Mini_Project_Linear_Regression.ipynb
@@ -3983,7 +3983,7 @@
     "<p><b>Exercise:</b> Remove the outliers and high leverage points from your model and run the regression again. How do the results change?</p>\n",
     "</div>\n",
     "\n",
-    "R^2 goes from 59 to 73. Although it's still hard to see a complete linear relationship on the scatter plot."
+    "R^2 goes from 59 to 73. Although it's still hard to see a great linear relationship on the scatter plot."
    ]
   },
   {
