--- a/logistic_regression/Mini_Project_Logistic_Regression.ipynb
+++ b/logistic_regression/Mini_Project_Logistic_Regression.ipynb
@@ -561,6 +561,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We obtained a higher accuracy on test data, but each test could theoretically vary depending on the data. Cross validation and grid search is important to train our model several times on different chunks of data. We then compare the accuracy of the tests and choose the one that performed the best."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
